--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
         }
     ],
     "require": {
-         "php": "^7.2|^8.0",
-         "illuminate/support": "^5.8|^6|^7|^8",
+         "php": "^7.2|^8.0|^8.1",
+         "illuminate/support": "^5.8|^6|^7|^8|^9",
          "guzzlehttp/guzzle": "^6.3.1|^7.0"
     },
     "autoload": {
